can play more than 2 as for subject mention with their shitty phrasing. Handle death and room cleaning after game. Player can directly relaunch after game. Winner is sent to all players. Spectral looks weird in some situation also need to check for diconnect handling as it is a bit scuffed

--- a/TODO
+++ b/TODO
@@ -1,16 +1,13 @@
-menu after joining
-make the otherplayer spectra
-socket.io in middleware(????)
 
-score -> bonus
-destructible handicap -> bonus
-invisible gamemode -> bonus
-increase gravity after threshold -> bonus
-piece preview -> bonus
-
-
-
-backend
-------------------
-
-possibility relaunch game
+// score -> bonus
+// destructible handicap -> bonus
+// invisible gamemode -> bonus
+// increase gravity after threshold -> bonus
+// piece preview -> bonus
+// properly handle death
+// only pure fun (doesnt mutate input no http)
+// backend
+// ------------------
+// possibility relaunch game + reconnect
+// handle death
+// at least the Player, Piece and Game classes.
